Refactor structs in Utils namespace.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,8 @@ set (SOURCE_FILES
 	MainWindow.cpp
   AddItemDialog.cpp
   ConfigurationDialog.cpp
+  ItemWidget.cpp
+  Utils.cpp
 )
   
 set (EXTERNAL_LIBRARIES
