--- a/installer/script.iss.in
+++ b/installer/script.iss.in
@@ -32,6 +32,8 @@ Source: "*.dll"; DestDir: "{app}";
 Source: "iconengines/*.*"; DestDir: "{app}/iconengines/";
 Source: "imageformats/*.*"; DestDir: "{app}/imageformats/";
 Source: "platforms/*.*"; DestDir: "{app}/platforms/";
+Source: "networkinformation/*.*"; DestDir: "{app}/platforms/";
+
 
 [Run]
 Filename: "{app}\CurlDownloader.exe"; Description: "Launch Curl Downloader"; Flags: postinstall nowait skipifsilent unchecked
